force-app/main/default/objects/Contact/fields/AverageHourlyCost__c.field-meta.xml
<CustomField>
    <fullName>AverageHourlyCost__c</fullName>
    <label>Average Hourly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>