force-app/main/default/objects/Contact/fields/Costo_Medio_Orario__c.field-meta.xml
<CustomField>
    <fullName>Costo_Medio_Orario__c</fullName>
    <label>Costo Medio Orario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>