force-app/main/default/objects/Contact/fields/Jira_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Jira User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>