force-app/main/default/objects/Contact/fields/JiraUserId__c.field-meta.xml
<CustomField>
    <fullName>JiraUserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Jira User Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>