force-app/main/default/objects/Contact/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <label>Risorsa Interna/Employee</label>
</RecordType>