force-app/main/default/objects/Contact/recordTypes/NexusCustomer.recordType-meta.xml
<RecordType>
    <fullName>NexusCustomer</fullName>
    <active>true</active>
    <label>Nexus Customer</label>
</RecordType>