force-app/main/default/objects/Contact/recordTypes/NexusEmployee.recordType-meta.xml
<RecordType>
    <fullName>NexusEmployee</fullName>
    <active>true</active>
    <label>Nexus Employee</label>
</RecordType>